@@ -1,4 +1,3 @@
-
 package com.organics.products.service;
 
 import java.io.IOException;
@@ -6,23 +5,23 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import com.organics.products.entity.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.organics.products.dto.ProductDTO;
-import com.organics.products.entity.Category;
-import com.organics.products.entity.Product;
-import com.organics.products.entity.ProductImage;
-import com.organics.products.entity.UnitType;
 import com.organics.products.exception.ResourceNotFoundException;
 import com.organics.products.respository.CategoryRepo;
+import com.organics.products.respository.InventoryRepository;
 import com.organics.products.respository.ProductRepo;
 
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Service
+@Transactional
 public class ProductService {
 
 	@Autowired
@@ -34,19 +33,25 @@ public class ProductService {
 	@Autowired
 	private ProductRepo productRepo;
 
+	@Autowired
+	private DiscountService discountService;
 
+
+
+
+	@Autowired
+	private InventoryRepository inventoryRepository;
 
 	private ProductDTO convertToDTO(Product product) {
 		ProductDTO dto = new ProductDTO();
+
 		dto.setId(product.getId());
 		dto.setProductName(product.getProductName());
 		dto.setBrand(product.getBrand());
 		dto.setDescription(product.getDescription());
-		dto.setDiscount(product.getDiscount());
 		dto.setReturnDays(product.getReturnDays());
 		dto.setMrp(product.getMRP());
 		dto.setStatus(product.getStatus());
-		dto.setAfterDiscount(product.getAfterDiscount());
 		dto.setUnit(product.getUnit());
 		dto.setNetWeight(product.getNetWeight());
 
@@ -55,18 +60,41 @@ public class ProductService {
 		}
 
 		if (product.getImages() != null) {
-			List<String> urls = product.getImages().stream().map(img -> s3Service.getFileUrl(img.getImageUrl()))
+			List<String> urls = product.getImages()
+					.stream()
+					.map(img -> s3Service.getFileUrl(img.getImageUrl()))
 					.collect(Collectors.toList());
 			dto.setImageUrls(urls);
 		}
+
+		List<Inventory> inventories = inventoryRepository.findByProductId(product.getId());
+		if (!inventories.isEmpty()) {
+			dto.setInventoryId(inventories.get(0).getId());
+			dto.setAvailableStock(inventories.get(0).getAvailableStock());
+		}
+
+		Double finalPrice = discountService.calculateFinalPrice(product);
+		dto.setFinalPrice(finalPrice);
+
+		if (finalPrice < product.getMRP()) {
+			dto.setDiscountAmount(product.getMRP() - finalPrice);
+
+			Discount appliedDiscount = discountService.getApplicableDiscount(product);
+			if (appliedDiscount != null) {
+				dto.setDiscountType(appliedDiscount.getDiscountType());
+			}
+		} else {
+			dto.setDiscountAmount(null);
+			dto.setDiscountType(null);
+		}
+
 		return dto;
 	}
+	
+	
 
 
-
-
-	public ProductDTO add(Long categoryId, MultipartFile[] images, String productName, String brand, String description,
-			Double discount, Integer returnDays, Double mrp, UnitType unitType, Double netWeight) throws IOException {
+	public ProductDTO add(Long categoryId, MultipartFile[] images, String productName, String brand, String description,Integer returnDays, Double mrp, UnitType unitType, Double netWeight) throws IOException {
 
 		Category category = categoryRepo.findById(categoryId)
 				.orElseThrow(() -> new ResourceNotFoundException("Category not found"));
@@ -75,19 +103,13 @@ public class ProductService {
 		product.setProductName(productName);
 		product.setBrand(brand);
 		product.setDescription(description);
-		product.setDiscount(discount);
 		product.setReturnDays(returnDays);
 		product.setMRP(mrp);
 		product.setCategory(category);
 		product.setStatus(true);
 		product.setUnit(unitType);
 		product.setNetWeight(netWeight);
-		
-		if (mrp != null && discount != null) {
-			product.setAfterDiscount(mrp - (mrp * discount / 100));
-		} else {
-			product.setAfterDiscount(mrp);
-		}
+
 
 		Product savedProduct = productRepo.save(product);
 
@@ -108,8 +130,9 @@ public class ProductService {
 
 		return convertToDTO(finalProduct);
 	}
-
-
+	
+	
+	
 
 	public void inActive(Long id, Boolean status) {
 
@@ -119,35 +142,30 @@ public class ProductService {
 		product.setStatus(status);
 		productRepo.save(product);
 	}
-
-
-
+	
+	
 
 	public List<ProductDTO> activeProd() {
 
 		List<Product> products = productRepo.findByStatusTrue();
 
-		return products.stream()
-				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
 	}
-
-
+	
+	
+	
 
 	public List<ProductDTO> getInActive() {
 
 		List<Product> products = productRepo.findByStatusFalse();
 
-		return products.stream()
-				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
 	}
-
-
-
+	
+	
 
 	public Product updateProduct(Long id, MultipartFile[] images, String productName, String brand, String description,
-			Double discount, Integer returnDays, Double mrp, Long categoryId, UnitType unitType, Double netWeight) throws IOException {
+								 Integer returnDays, Double mrp, Long categoryId, UnitType unitType, Double netWeight) throws IOException {
 
 		Product product = productRepo.findById(id)
 				.orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + id));
@@ -158,24 +176,19 @@ public class ProductService {
 			product.setBrand(brand);
 		if (description != null)
 			product.setDescription(description);
-		if (discount != null)
-			product.setDiscount(discount);
 		if (returnDays != null)
 			product.setReturnDays(returnDays);
 		if (mrp != null)
 			product.setMRP(mrp);
-		
+
 		if(unitType != null) {
 			product.setUnit(unitType);
 		}
-		
+
 		if(netWeight != null) {
 			product.setNetWeight(netWeight);
 		}
-		
-		if (product.getMRP() != null && product.getDiscount() != null) {
-			product.setAfterDiscount(product.getMRP() - (product.getMRP() * product.getDiscount() / 100));
-		}
+
 
 		if (categoryId != null) {
 			Category category = categoryRepo.findById(categoryId)
@@ -206,8 +219,8 @@ public class ProductService {
 
 		return productRepo.save(product);
 	}
-
-
+	
+	
 
 	public List<ProductDTO> byCategory(Long categoryId) {
 
@@ -216,9 +229,23 @@ public class ProductService {
 
 		List<Product> products = productRepo.findByCategoryId(category.getId());
 
+		return products.stream().map(this::convertToDTO).collect(Collectors.toList());
+	}
+
+	
+	
+	public List<ProductDTO> searchByName(String name) {
+
+		List<Product> products = productRepo.findByProductNameContainingIgnoreCaseAndStatusTrue(name);
+
+		if (products.isEmpty()) {
+			throw new ResourceNotFoundException("Products not found with this name in search: " + name);
+		}
+
 		return products.stream()
 				.map(this::convertToDTO)
-				.collect(Collectors.toList());
+				.collect(Collectors
+						.toList());
 	}
 
 }
